draft-packages/rating-scale-legacy/KaizenDraft/RatingScaleLegacy/styles.module.scss
@import "~@kaizen/design-tokens/sass/color";
@import "~@kaizen/design-tokens/sass/border";
@import "~@kaizen/component-library/styles/layout";

@mixin respond-to($media) {
  @if $media == print {
    @media only print {
      @content;
    }
  } @else if $media == iphone {
    @media only screen and (max-width: 767px) {
      @content;
    }
  } @else if $media == ipad {
    @media only screen and (max-width: 959px) {
      @content;
    }
  }
}

$block-height: 35px;
$desktop-rater-width: 220px;
$desktop-rater-height: 63px;

$start: #fd3;
$end: #f50;

$first: mix($start, $end, 100%);
$second: mix($start, $end, 75%);
$third: mix($start, $end, 50%);
$fourth: mix($start, $end, 25%);
$fifth: mix($start, $end, 0%);

@mixin pop {
  -webkit-animation: pop cubic-bezier(0, 0.94, 0.32, 1) 0.7s 1;
}

@mixin fill($height) {
  &:first-child .ratingItemFill {
    border-top-left-radius: $height;
    border-bottom-left-radius: $height;

    [dir="rtl"] & {
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
      border-top-right-radius: $height;
      border-bottom-right-radius: $height;
    }

    &:after {
      border-top-left-radius: $height;
      border-bottom-left-radius: $height;

      [dir="rtl"] & {
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
        border-top-right-radius: $height;
        border-bottom-right-radius: $height;
      }
    }
  }

  &:last-child .ratingItemFill {
    border-top-right-radius: $height;
    border-bottom-right-radius: $height;

    [dir="rtl"] & {
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
      border-top-left-radius: $height;
      border-bottom-left-radius: $height;
    }

    &:after {
      border-top-right-radius: $height;
      border-bottom-right-radius: $height;

      [dir="rtl"] & {
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
        border-top-left-radius: $height;
        border-bottom-left-radius: $height;
      }
    }
  }
}

@keyframes pop {
  0% {
    opacity: 0.5;
    -webkit-transform: scale(1);
  }
  100% {
    opacity: 0;
    -webkit-transform: scale(1.78);
  }
}

.container {
  width: $desktop-rater-width;
  position: relative;
  box-sizing: border-box;

  @include respond-to(iphone) {
    margin: 0 auto;
    width: auto;
    height: auto;
    max-width: 258px;
    position: static;
  }

  &.rated .ratingItem.unselected .ratingItemFill {
    background-color: $kz-color-wisteria-100;
    border-color: $kz-color-wisteria-100;
    transition: background 0.1s;
  }

  &.reversed.rated .ratingItem.unselected .ratingItemFill {
    background-color: transparent;
    border-color: rgba($kz-color-white, 0.65);
  }
}

:global(.js-focus-visible) {
  $focus-ring-offset: 3px;

  .container {
    &:focus {
      outline: none;
    }

    &:global(.focus-visible)::after {
      $focus-ring-offset: ($kz-border-focus-ring-border-width * 2) + 1px;
      content: "";
      position: absolute;
      background: transparent;
      border-radius: $kz-border-focus-ring-border-radius;
      border-width: $kz-border-focus-ring-border-width;
      border-style: $kz-border-focus-ring-border-style;
      border-color: $kz-color-cluny-500;
      top: -$focus-ring-offset;
      left: -$focus-ring-offset;
      right: -$focus-ring-offset;
      bottom: -$focus-ring-offset;
    }
  }

  .ratingItem:focus {
    outline: none;
  }

  .reversed:not(.rated)
    :global([data-focus-visible-added]).ratingItem:focus
    .ratingItemFill {
    border-color: $kz-color-white;
  }

  // React seems to be causing the .focus-visible class to only be added sometimes,
  // so we need to use [data-focus-visible-added] here instead.
  // See https://github.com/WICG/focus-visible#2-update-your-css
  :global([data-focus-visible-added]).ratingItem::after {
    content: "";
    position: absolute;
    background: transparent;
    border-radius: $kz-border-focus-ring-border-radius;
    border-width: $kz-border-focus-ring-border-width;
    border-style: $kz-border-focus-ring-border-style;
    border-color: $kz-color-cluny-500;
    top: -$focus-ring-offset;
    left: -$focus-ring-offset;
    right: -$focus-ring-offset;
    bottom: -$focus-ring-offset;
  }

  .reversed :global([data-focus-visible-added]).ratingItem::after {
    border-color: $kz-color-cluny-300;
  }
}

.itemContainer {
  width: 100%;
  white-space: nowrap;
  display: inline-block;
  height: $block-height + 2px;
  font-size: 0;
}

.legend {
  margin-bottom: $ca-grid * 0.1;
  text-align: center;
  position: absolute;
  top: -$ca-grid * 1.15;
  left: 0;
  right: 0;

  @include respond-to(iphone) {
    position: initial;
    top: 0;
  }
}

.ratingItem {
  @include fill($block-height);
  font-size: 1px;
  line-height: 1;
  margin: 0;
  padding: 0;
  overflow-x: visible;
  display: inline-block;
  width: 20%; // 5 columns
  position: relative;

  &.suggested,
  &.selected {
    .field1 {
      background-color: $first;
      border-color: $first;
      &:after {
        background-color: $first;
      }
    }
    .field2 {
      background-color: $second;
      border-color: $second;
      &:after {
        background-color: $second;
      }
    }
    .field3 {
      background-color: $third;
      border-color: $third;
      &:after {
        background-color: $third;
      }
    }
    .field4 {
      background-color: $fourth;
      border-color: $fourth;
      &:after {
        background-color: $fourth;
      }
    }
    .field5 {
      background-color: $fifth;
      border-color: $fifth;
      &:after {
        background-color: $fifth;
      }
    }
  }
}

.ratingItemFill {
  transition: background 0.1s, border-color 0.1s;
  width: 90%;
  height: $block-height;
  margin-left: 2px;
  border: 1px solid #d7d8d8;

  &:hover {
    transition: background 0s, border-color 0s;
  }
  &:after {
    content: " ";
    display: block;
    height: 100%;
    width: 100%;
    pointer-events: none;
  }

  &.pop:after {
    @include pop;
  }
}

.reversed .ratingItemFill {
  border-width: 2px;
  border-color: rgba($kz-color-white, 0.65);
}

@media only screen and (max-width: 767px) {
  $block-height: 48px;

  .itemContainer {
    height: $block-height + 2px;
  }

  .ratingItem {
    @include fill($block-height);
  }

  .ratingItemFill {
    height: $block-height;
  }
}

@media print {
  .legend {
    display: none;
  }

  .container {
    top: 1em;
    right: 2em;
    width: 150px;

    .ratingItem {
      .ratingItemFill {
        height: 25px;
        background: #fff;
        border: 1px solid #d7d8d8;
      }

      &:first-child,
      &:last-child {
        .ratingItemFill {
          background: #fff;
          border-width: 2px;
        }
      }
    }
  }
}

